Truncate more aggressively on fusion, fix some styling

--- a/src/theme/BlogPostItem/Footer/styles.module.css
+++ b/src/theme/BlogPostItem/Footer/styles.module.css
@@ -1,7 +1,8 @@
 .blogFooter {
+    margin-top: 1rem;
     border-bottom: 1px solid rgba(100,100,100,0.2);
 }
 .readMore {
-    padding: 0 1rem 1rem;
+    padding-bottom: 1rem;
     color: var(--brand-color);
 }
