--- a/src/theme/BlogPostItem/Header/Info/styles.module.css
+++ b/src/theme/BlogPostItem/Header/Info/styles.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   gap: 1em;
+  margin-bottom: 1rem;
 }
 
 .tag {
